fixed the search and bars buttons layout on mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -895,14 +895,15 @@ footer {
 
   .bars {
     margin-left: 0;
-    left: 300px;
+    right: 0;
     display: block;
+    color: #d8d509;
   }
 
   .search {
     position: absolute;
     margin-left: 0;
-    left: 250px;
+    right: 50px;
   }
 
   .nav-logo {
